Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,27 +24,30 @@
 
 <p>Tux Resistor is an Interactive Electronics Tool which can be used to convert Resitor color bands to Resistor values and vice versa.</p>
 
+<p><img src="http://i.imgur.com/YWbzraX.png" alt="Start page" title="Tux Resistor"></p>
+
+<p><img src="http://imgur.com/iLqHcip.png" alt="Colorband to values" title="Tux Resistor"></p>
+
+<p><img src="http://imgur.com/115rTMx.png" alt="Values to colorband" title="Tux Resistor"></p>
+
+<p><img src="http://imgur.com/YWbzraX.png" alt="Credits" title="Tux Resistor"></p>
+
 <h1>
-<a id="installation-for-linux" class="anchor" href="#installation-for-linux" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation for Linux</h1>
+<a id="installation-for-linuxosxmacos" class="anchor" href="#installation-for-linuxosxmacos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation for Linux/OSx/macOS</h1>
 
-<p>Extract the Zip file(bin/tuxresistorLinux.zip) and run the tux.sh file.</p>
+<p>Download and extract the <a href="https://github.com/vividvilla/tuxresistor/releases/download/1.0/Linux-osx-macos.zip">Zip file</a> and run 
+<code>./tux.sh</code> or run from commandline</p>
 
-<p>or</p>
-
-<p>Using Command line(Run CMD) navigate to the extracted folder(tuxresistorWindows) and run the following command</p>
-
-<p><code>java -cp .;tuxresistor.jar tuxresistor.Main</code></p>
+<pre><code>java -cp .:tuxresistor.jar tuxresistor.Main
+</code></pre>
 
 <h1>
 <a id="installation-for-windows" class="anchor" href="#installation-for-windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation for Windows</h1>
 
-<p>Extract the Zip file(bin/tuxresistorWindows.zip) and run the .jar file using Java.</p>
+<p>Download and extract the <a href="https://github.com/vividvilla/tuxresistor/releases/download/1.0/Windows.zip">Zip file</a> and run the <code>.jar</code> file using Java or run from command line</p>
 
-<p>or</p>
-
-<p>Using Terminal navigate to the extracted folder(tuxresistorLinux) and run the following command</p>
-
-<p><code>java -cp .:tuxresistor.jar tuxresistor.Main</code></p>
+<pre><code>java -cp .:tuxresistor.jar tuxresistor.Main
+</code></pre>
 
 <h1>
 <a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h1>
@@ -60,7 +63,51 @@
 
 <p>Vivek r - <a href="mailto:vividvilla@gmail.com">vividvilla@gmail.com</a></p>
 
-<p><a href="http://vivek.techiestuffs.com">http://vivek.techiestuffs.com</a></p>
+<h1>
+<a id="faq" class="anchor" href="#faq" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>FAQ</h1>
+
+<h1>
+<a id="what-is-tux-resistor-" class="anchor" href="#what-is-tux-resistor-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is Tux Resistor ?</h1>
+
+<p>Tux Resistor is an Interactive Electronics Tool which can be used to convert Resistor color bands to Resistor values and also Convert Color Codes to Resistor Color Bands.</p>
+
+<h1>
+<a id="how-it-is-useful-for-me-" class="anchor" href="#how-it-is-useful-for-me-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How it is Useful for Me ?</h1>
+
+<p>If you are an Electronics Hobbyist It will be helpful to save some time.</p>
+
+<h1>
+<a id="is-this-a-opensource-software-" class="anchor" href="#is-this-a-opensource-software-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Is this a Opensource Software ?</h1>
+
+<p>Absolutely,it is an Opensource Project and I also hosted the sources on Sourceforge.</p>
+
+<h1>
+<a id="will-it-work-on-windows-" class="anchor" href="#will-it-work-on-windows-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Will it Work on Windows ?</h1>
+
+<p>Yes,it will.Just Download Windows version, extract the Zip file and run the .jar file.</p>
+
+<h1>
+<a id="will-it-work-on-linux-" class="anchor" href="#will-it-work-on-linux-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Will it Work on Linux ?</h1>
+
+<p>Yes,It will Download Linux version and extract the Zip file and you will find a  tux.sh file run on Terminal or just by double clicking and choosing run option.</p>
+
+<h1>
+<a id="what-about-mac-and-other-os-" class="anchor" href="#what-about-mac-and-other-os-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What about Mac and other OS ?</h1>
+
+<p>Unfortunately I haven't tried this version with Mac or other Operating Systems,As soon as I test it it will be available for download.</p>
+
+<p>I have tested it in Mac OS X Lion 10.7.4,It works great.Just download the Unix version and run the shell script in Mac Terminal.</p>
+
+<h1>
+<a id="do-i-need-any-softwares-to-run-this-" class="anchor" href="#do-i-need-any-softwares-to-run-this-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Do I need any Softwares to Run this ?</h1>
+
+<p>Yes, You need to install Java Runtime Environment(JRE) or Java Development Kit (JDK),</p>
+
+<p>If you are using Windows Download JRE form here - <a href="http://javadl.sun.com/webapps/download/AutoDL?BundleId=64152">http://javadl.sun.com/webapps/download/AutoDL?BundleId=64152</a></p>
+
+<p>For Linux Download JRE from here - <a href="http://javadl.sun.com/webapps/download/AutoDL?BundleId=64145">http://javadl.sun.com/webapps/download/AutoDL?BundleId=64145</a></p>
+
+<p>Linux users have plenty of other options also like installing open JDK from repository.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/vividvilla/tuxresistor">Tuxresistor</a> is maintained by <a href="https://github.com/vividvilla">vividvilla</a>.</span>
